...
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKt-gc-Jzi">
                                                <rect key="frame" x="8" y="5" width="244" height="220"/>
                                                <subviews>
                                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xS5-Ek-f7p">
                                                        <rect key="frame" x="0.0" y="0.0" width="244" height="220"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="UserName" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CyX-o7-Npr">
                                                                <rect key="frame" x="25" y="30" width="194" height="30"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="30" id="koM-jI-BpT"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
...
                                                                <rect key="frame" x="25" y="65" width="194" height="1"/>
                                                                <color key="backgroundColor" red="0.80622571239999996" green="0.80622571239999996" blue="0.80622571239999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="1" id="dM3-8i-YWw"/>
                                                                </constraints>
                                                            </view>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vr3-ED-Koe">
                                                                <rect key="frame" x="25" y="86" width="194" height="30"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="30" id="6hC-pG-ekY"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
